--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "latest",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
     "vite": "^4.4.5"
   }
 }
